--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <audio id="audio" preload="auto">
         <!-- 音声ファイルのパスを指定してください -->
-        <source src="voice.mp3" type="audio/mpeg">
+        <source src="CottonT-AI.mp3" type="audio/mpeg">
     </audio>
     <script src="script.js"></script>
 </body>
