--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@
         <source src="CottonT-AI.mp3" type="audio/mpeg">
     </audio>
     <script src="script.js"></script>
-</body>
+
+    // URLパラメータで自動再生を検出
+    window.addEventListener('load', () => {
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.get('autoplay') === 'true') {
+            // 自動再生を実行
+            setTimeout(() => {
+                startAudio();
+            }, 500); // 0.5秒待ってから再生
+        }
+    });
+
+    </body>
 </html>
